--- a/memory.css
+++ b/memory.css
@@ -5,14 +5,27 @@ body {
     color: white;
   }
   
-  h1 {
-      text-align: center;
-      font-weight: 700;
-      font-size: 50px;
-  }
-  
-  p {
-      text-align: center;
-      font-size: 30px;
-      font-weight: bold;
-  }
+h1 {
+    text-align: center;
+    font-weight: 700;
+    font-size: 50px;
+}
+
+p {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.actions {
+    display: flex;
+    justify-content: center;
+}
+
+.actions button {
+    padding: 8px 16px;
+    font-size: 30px;
+    border-radius: 10px;
+    background-color: #27ae60;
+    color: white;
+}
